Fix de la partie header en version mobile

--- a/src/Web/WebBundle/Resources/public/css/global/_rwd.scss
+++ b/src/Web/WebBundle/Resources/public/css/global/_rwd.scss
@@ -21,84 +21,6 @@
 }
 
 @media (max-width: $tiny-screen) {
-  .RBZ_wrapper {
-    width: 100%;
-  }
-  .RBZ_icons_profile {
-    background: sprite($icons, profile_smartphone);
-    background-repeat: no-repeat;
-    background-position: sprite-position($icons, profile_smartphone, 0, 6)
-  }
-  .RBZ_icons_mailinglist {
-    background: sprite($icons, mailinglist_smartphone);
-    background-repeat: no-repeat;
-  }
-  .RBZ_icons_cagnotte {
-    background: sprite($icons, cagnotte_smartphone);
-    background-repeat: no-repeat;
-  }
-  #div_RBZ_banner {
-    height: 55px;
-    background: url(/bundles/webweb/images/global/logo-smartphone.png) 10px 10px no-repeat;
-    #div_RBZ_counterMailingList,
-    #div_RBZ_counterGain {
-      margin-top: 10px;
-      span:last-child {
-        height: 34px;
-        line-height: 35px;
-      }
-    }
-
-  }
-  div#div_RBZ_menuProfile {
-    margin: 0 !important;
-    ul li {
-      padding-left: 35px;
-    }
-  }
-  #div_RBZ_menuMobile {
-    position: relative;
-    width: 100%;
-    ul {
-      position: absolute;
-      top: 40px;
-      left: 0;
-      width: 100%;
-      li {
-        z-index: 10;
-        display: block;
-        line-height: 40px;
-        background-color: $black-nav;
-        width: 100%;
-        a:hover, a.active {
-          font-weight: bold;
-        }
-      }
-    }
-  }
-  ul#ul_RBZ_menuMobile {
-    & > li {
-      background: sprite($icons, menu);
-      @include sprite-dimensions($icons, menu);
-      background-repeat: no-repeat;
-      line-height: 40px;
-      margin-left: 10px;
-      position: relative;
-      ul {
-        position: absolute;
-        width: 100%;
-        left: -10px;
-        top: 30px;
-        background-color: $black-nav;
-        li {
-          background-color: $black-nav;
-          width: 100%;
-          margin: 0;
-        }
-      }
-    }
-  }
-
   div#div_RBZ_userMenu ul li {
     height: 32px;
     line-height: 32px;
